// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TwoFactorAuthenticationSection /> render() should open the Two-Factor Authentication Modal via Enable or Update button 1`] = `
<body>
  <div>
    <div
      class="heading-subsection-semibold mb16"
    >
      Two-Factor Authentication (2FA)
      <div
        class="badge ml-3 "
      >
        Enabled
      </div>
    </div>
    <div
      class="body-regular mb16"
    >
      For an added layer of security, enable Two-Factor Authentication for your Gorgias login.
    </div>
    <button
      class="wrapper mr-2 fill secondary medium"
      type="button"
    >
      Update 2FA
    </button>
    <button
      class="wrapper fill destructive medium"
      type="button"
    >
      Disable 2FA
    </button>
    <div>
      TwoFactorAuthenticationModal mocked
      <button
        type="button"
      >
        Finish action mocked
      </button>
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationSection /> render() should open the Two-Factor Authentication Modal via Enable or Update button 2`] = `
<body>
  <div>
    <div
      class="heading-subsection-semibold mb16"
    >
      Two-Factor Authentication (2FA)
      <div
        class="badge ml-3 "
      >
        Disabled
      </div>
    </div>
    <div
      class="body-regular mb16"
    >
      For an added layer of security, enable Two-Factor Authentication for your Gorgias login.
    </div>
    <button
      class="wrapper mr-2 fill primary medium"
      type="button"
    >
      Enable 2FA
    </button>
    <div>
      TwoFactorAuthenticationModal mocked
      <button
        type="button"
      >
        Finish action mocked
      </button>
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationSection /> render() should render the Two-Factor Authentication Section with status tag 1`] = `
<body>
  <div>
    <div
      class="heading-subsection-semibold mb16"
    >
      Two-Factor Authentication (2FA)
      <div
        class="badge ml-3 "
      >
        Enabled
      </div>
    </div>
    <div
      class="body-regular mb16"
    >
      For an added layer of security, enable Two-Factor Authentication for your Gorgias login.
    </div>
    <button
      class="wrapper mr-2 fill secondary medium"
      type="button"
    >
      Update 2FA
    </button>
    <button
      class="wrapper fill destructive medium"
      type="button"
    >
      Disable 2FA
    </button>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationSection /> render() should render the Two-Factor Authentication Section with status tag 2`] = `
<body>
  <div>
    <div
      class="heading-subsection-semibold mb16"
    >
      Two-Factor Authentication (2FA)
      <div
        class="badge ml-3 "
      >
        Disabled
      </div>
    </div>
    <div
      class="body-regular mb16"
    >
      For an added layer of security, enable Two-Factor Authentication for your Gorgias login.
    </div>
    <button
      class="wrapper mr-2 fill primary medium"
      type="button"
    >
      Enable 2FA
    </button>
  </div>
</body>
`;
